--- a/pom.xml
+++ b/pom.xml
@@ -7,5 +7,12 @@
     <groupId>andrei.vvss</groupId>
     <artifactId>bigProject</artifactId>
     <version>1.0-SNAPSHOT</version>
-    
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+    </dependencies>
+
 </project>
